Add setting form sample

--- a/digital-photo-frame-screen-saver.csproj
+++ b/digital-photo-frame-screen-saver.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\sample.jpg" />
+    <Content Include="images\setting.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
